--- a/api-gateway/prd/k8s-api-gateway-deploy.yaml
+++ b/api-gateway/prd/k8s-api-gateway-deploy.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: k8s-api-gateway
-        image: ku0629/k8s-api-gateway:0.0.3
+        image: rnals12/k8s-api-gateway:0.0.3
         imagePullPolicy: Always
         env:
         - name: SPRING_PROFILES_ACTIVE
